--- a/_posts/2020-12-22-book-jpa-1.md
+++ b/_posts/2020-12-22-book-jpa-1.md
@@ -90,7 +90,7 @@ Member member2 = list.get(memberId);
 > 객체는 객체대로 설계관계형 데이터베이스는 관계형 데이터베이스대로 설계차이를 ORM 프레임워크가 중간에서 매핑 <br>
 
 #### JPA는 애플리케이션과 JDBC 사이에서 동작
-![jpa_1]({{ site.baseurl }}/images/20201222/jpa_1.png)
+![jpa_1]({{ site.baseurl }}/image/20201222/jpa_1.png)
 
 > 핵심은 쿼리를 JPA가 만든다
   패러다임 불일치 해결!!!!!
